<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menuTxt"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/tut_1"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:src="@drawable/menu" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/captureTxt"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/tut_2"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:src="@drawable/tutorial_2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/allowTxt"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/tut_3"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:src="@drawable/allow" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/takePicTxt"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/tut_4"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:src="@drawable/tutorial_4" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/doneTxt"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/tut_6_1"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:src="@drawable/tutorial_6_1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/doneTxt2"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/tut_6_2"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:src="@drawable/tutorial_6_2"
                />

            <ImageView
                android:id="@+id/tut_7"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:src="@drawable/tutorial_7"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/howTo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/doneTxt3"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/tut_6_3"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:src="@drawable/tutorial_6_3"
                />

            <ImageView
                android:id="@+id/tut_6_4"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:src="@drawable/how_to_result"
                />


            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/errorTxtTut"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/tut_8"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_gravity="center"
                android:src="@drawable/tutorial_8" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>